Finished implementing the parallax image directive

--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -26,7 +26,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content [fullscreen]="true" scrollEvents="true" [appParallax]="img">
   <div
     #img
     class="header-image"
